--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -149,6 +149,14 @@ private var managerStore: [String: Alamofire.Manager] = [:]
 class AlamofireRequestBuilder<T>: RequestBuilder<T> {
     required init(method: String, URLString: String, parameters: [String : AnyObject]?, isBody: Bool) {
         super.init(method: method, URLString: URLString, parameters: parameters, isBody: isBody)
+
+        Decoders.addDecoder(clazz: GRPCStatus.self) { (source: AnyObject) -> GRPCStatus in
+            let sourceDictionary = source as! [NSObject:AnyObject]
+            let instance = GRPCStatus()
+            instance.errorDescription = Decoders.decodeOptional(clazz: String.self, source: sourceDictionary["Error"])
+            instance.code = Decoders.decodeOptional(clazz: Int.self, source: sourceDictionary["Code"])
+            return instance
+        }
     }
 
     override func execute(completion: (response: Response<T>?, error: ErrorType?) -> Void) {
