--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -164,6 +164,8 @@ class AlamofireRequestBuilder<T>: RequestBuilder<T> {
         // Create a new manager for each request to customize its request header
         let configuration = NSURLSessionConfiguration.defaultSessionConfiguration()
         configuration.HTTPAdditionalHeaders = buildHeaders()
+        configuration.timeoutIntervalForRequest = 4
+        configuration.timeoutIntervalForResource = 20
         let manager = Alamofire.Manager(configuration: configuration)
         managerStore[managerId] = manager
 
