--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -233,7 +233,8 @@ class AlamofireRequestBuilder<T>: RequestBuilder<T> {
         if let credential = self.credential {
             request.authenticate(usingCredential: credential)
         }
-
+        ServiceManager.updateUserDate()       
+ 
         request.validate().responseJSON(options: .AllowFragments) { response in
             managerStore.removeValueForKey(managerId)
 
