修复增加userdate的时机

--- a/modules/swagger-codegen/src/main/resources/swift/APIs.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/APIs.mustache
@@ -43,6 +43,7 @@ public class RequestBuilder<T> {
         self.parameters = parameters
         self.isBody = isBody
         
+        ServiceManager.updateUserDate()
         addHeaders({{projectName}}API.customHeaders)
     }
     
