--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -16,7 +16,7 @@ public class GRPCStatus: JSONEncodable {
     public var errorDescription: String?
     public var code: Int?
     var isError: Bool {
-        if self.code != nil {
+        if self.code != 0 {
             print("GRPC status is error: \(self.errorDescription) \(self.code)")
             return true
         } else {
@@ -233,7 +233,7 @@ class AlamofireRequestBuilder<T>: RequestBuilder<T> {
         if let credential = self.credential {
             request.authenticate(usingCredential: credential)
         }
- 
+
         request.validate().responseJSON(options: .AllowFragments) { response in
             managerStore.removeValueForKey(managerId)
 
