--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -86,11 +86,26 @@ enum GRPCError: Int, ErrorType, CustomStringConvertible {
                                          -1001: .DeadlineExceeded,
                                          -6003: .Unauthenticated
                                          ]
+        var httpCodeMap: [Int: GRPCError] = [401: .Unauthenticated,
+                                             403: .PermissionDenied,
+                                             400: .InvalidArgument]
         if let error = error {
             if codeMap.keys.contains(error.code) {
-                return codeMap[error.code]
+                let err = codeMap[error.code]
+                let parts = error.localizedFailureReason?.componentsSeparatedByString(":")
+                var rawHttpCode: Int? = 0
+                if parts != nil && parts!.count == 2 {
+                    rawHttpCode = Int(parts![1].stringByReplacingOccurrencesOfString(" ", withString: ""))
+                }
+                if rawHttpCode != nil {
+                    let err = httpCodeMap[rawHttpCode!]
+                    print("Warning: network error \(error) convert http error to GRPC error: \(err)")
+                    return err
+                }
+                print("Warning: network error \(error) convert to GRPC error: \(err)")
+                return err
             } else {
-                print ("NSError: \(error)")
+                print("Warning: unknown network error \(error) convert to GRPC error: UNKNOWN")
                 return GRPCError.Unknown
             }
         } else {
