--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -89,7 +89,8 @@ enum GRPCError: Int, ErrorType, CustomStringConvertible {
         var httpCodeMap: [Int: GRPCError] = [401: .Unauthenticated,
                                              403: .PermissionDenied,
                                              400: .InvalidArgument,
-                                             500: .Internal]
+                                             500: .Internal,
+                                             502: .Unavailable]
         if let error = error {
             if codeMap.keys.contains(error.code) {
                 let masterError = codeMap[error.code]
