--- a/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift/AlamofireImplementations.mustache
@@ -17,10 +17,10 @@ public class GRPCStatus: JSONEncodable {
     public var code: Int?
     var isError: Bool {
         if self.code != 0 {
-            print("GRPC status is error: \(self.errorDescription) \(self.code)")
+            BFLog("rpc", "GRPC status is error: \(self.errorDescription) \(self.code)")
             return true
         } else {
-            // print("GRPC status is not error: \(self.errorDescription) \(self.code)")
+            // BFLog("rpc", "GRPC status is not error: \(self.errorDescription) \(self.code)")
             return false
         }
     }
@@ -103,14 +103,14 @@ enum GRPCError: Int, ErrorType, CustomStringConvertible {
                 if rawHttpCode != nil {
                     let err = httpCodeMap[rawHttpCode!]
                     if err != nil {
-                        print("Warning: network error \(error) convert http error to GRPC error: \(err)")
+                        BFLog("rpc", "Warning: network error \(error) convert http error to GRPC error: \(err)")
                         return err
                     }
                 }
-                print("Warning: network error \(error) convert to GRPC error: \(masterError)")
+                BFLog("rpc", "Warning: network error \(error) convert to GRPC error: \(masterError)")
                 return masterError
             } else {
-                print("Warning: unknown network error \(error) convert to GRPC error: UNKNOWN")
+                BFLog("rpc", "Warning: unknown network error \(error) convert to GRPC error: UNKNOWN")
                 return GRPCError.Unknown
             }
         } else {
